--- a/finace-back/pom.xml
+++ b/finace-back/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.liumingkai</groupId>
     <artifactId>finace-back</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>finace-back</name>
+    <name>finace-root</name>
     <modules>
         <module>finace-common</module>
     </modules>
@@ -71,7 +71,7 @@
                 <version>${org.mapstruct.version}</version>
             </dependency>
 
-            <!--            本地缓存-->
+            <!--本地缓存-->
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
@@ -149,10 +149,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <dependencies>
-
-    </dependencies>
 
     <build>
         <plugins>
@@ -293,4 +289,5 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
+
 </project>
