feat: 初始化wx模块

--- a/finace-back/pom.xml
+++ b/finace-back/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>finace-common</module>
         <module>finace-mybatis</module>
+        <module>finace-wx</module>
     </modules>
     <!--注意打包方式-->
     <packaging>pom</packaging>
