--- a/finace-back/finace-biz/pom.xml
+++ b/finace-back/finace-biz/pom.xml
@@ -11,6 +11,8 @@
     <groupId>com.liumingkai</groupId>
     <artifactId>finace-biz</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
