--- a/finace-back/.gitignore
+++ b/finace-back/.gitignore
@@ -2,7 +2,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+# 日志文件
+*.log
 ### IntelliJ IDEA ###
 .idea/**
 .idea/modules.xml
