feat: 完善.gitignore文件

--- a/finace-back/finace-admin-api/pom.xml
+++ b/finace-back/finace-admin-api/pom.xml
@@ -60,7 +60,7 @@
     </dependencies>
 
     <build>
-        <finalName>bage-finance-admin-api</finalName>
+        <finalName>finance-admin-api</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
