--- a/finace-back/finace-admin-api/src/main/resources/application-local.yml
+++ b/finace-back/finace-admin-api/src/main/resources/application-local.yml
@@ -11,4 +11,4 @@ spring:
 # 日志配置
 logging:
   file:
-    name: ../${spring.application.name}/logs/bage-finance-admin-api.log
+    name: ../${spring.application.name}-logs/finance-admin-api.log
