--- a/finace-back/pom.xml
+++ b/finace-back/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.liumingkai</groupId>
     <artifactId>finace-back</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>finace-root</name>
+    <name>finace-back</name>
     <modules>
         <module>finace-common</module>
         <module>finace-mybatis</module>
