--- a/finace-back/pom.xml
+++ b/finace-back/pom.xml
@@ -95,11 +95,6 @@
             </dependency>
 
             <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-boot-starter</artifactId>
-                <version>3.0.0</version>
-            </dependency>
-            <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
                 <artifactId>jackson-dataformat-xml</artifactId>
                 <version>2.13.4</version>
@@ -215,6 +210,7 @@
         </resources>
     </build>
 
+    <!-- 配置环境 -->
     <profiles>
         <profile>
             <!-- 本地开发环境 -->
