--- a/finace-back/pom.xml
+++ b/finace-back/pom.xml
@@ -26,11 +26,22 @@
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <spring-boot.version>2.7.4</spring-boot.version>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <lombok-version>1.18.16</lombok-version>
+        <lombok-version>1.18.24</lombok-version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
         <mysql-connector-java-version>8.0.17</mysql-connector-java-version>
         <mybatis-generator-core-version>1.4.1</mybatis-generator-core-version>
+        <xxl-job.version>2.3.1</xxl-job.version>
+        <junit.version>4.12</junit.version>
+        <hutool.version>5.8.10</hutool.version>
+        <mybatis-spring-boot-starter.version>3.0.0</mybatis-spring-boot-starter.version>
+        <spring-boot-starter-data-redis.version>2.7.5</spring-boot-starter-data-redis.version>
+        <commons-lang3.version>3.10</commons-lang3.version>
+        <knife4j-spring-boot-starter.version>3.0.3</knife4j-spring-boot-starter.version>
+        <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
+        <redisson.version>3.13.6</redisson.version>
+        <jackson.version>2.13.4</jackson.version>
+        <guava.version>30.1-jre</guava.version>
     </properties>
 
     <dependencyManagement>
@@ -59,8 +70,7 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.18.16</version>
-                <scope>provided</scope>
+                <version>${lombok-version}</version>
             </dependency>
 
             <dependency>
@@ -79,72 +89,72 @@
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>30.1-jre</version>
+                <version>${guava.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.xuxueli</groupId>
                 <artifactId>xxl-job-core</artifactId>
-                <version>2.3.1</version>
+                <version>${xxl-job.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson</artifactId>
-                <version>3.13.6</version>
+                <version>${redisson.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
                 <artifactId>jackson-dataformat-xml</artifactId>
-                <version>2.13.4</version>
+                <version>${jackson.version}</version>
             </dependency>
 
             <!-- Swagger3 -->
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-boot-starter</artifactId>
-                <version>3.0.0</version>
+                <version>${springfox-boot-starter.version}</version>
             </dependency>
 
             <!-- 官方地址：https://doc.xiaominfo.com/-->
             <dependency>
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-spring-boot-starter</artifactId>
-                <version>3.0.3</version>
+                <version>${knife4j-spring-boot-starter.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.10</version>
+                <version>${commons-lang3.version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-redis</artifactId>
-                <version>2.7.5</version>
+                <version>${spring-boot-starter-data-redis.version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>3.0.0</version>
+                <version>${mybatis-spring-boot-starter.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.12</version>
+                <version>${junit.version}</version>
                 <scope>compile</scope>
             </dependency>
 
             <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
-                <version>5.8.10</version>
+                <version>${hutool.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
