--- a/finace-back/finace-admin-api/pom.xml
+++ b/finace-back/finace-admin-api/pom.xml
@@ -64,6 +64,13 @@
             <artifactId>finace-biz</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+<!--        针对macos配置-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-resolver-dns-native-macos</artifactId>
+            <classifier>osx-aarch_64</classifier>
+        </dependency>
     </dependencies>
 
     <build>
