--- a/finace-back/finace-admin-api/src/main/resources/application-local.yml
+++ b/finace-back/finace-admin-api/src/main/resources/application-local.yml
@@ -4,9 +4,9 @@ spring:
   #    active: local
   # 数据库配置
   datasource:
-    url: jdbc:mysql://localhost:3306/bage-finance-local?useUnicode=true&useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/finace?useUnicode=true&useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
     username: root
-    password: 123456
+    password: root
 # redis配置
 redis:
   database: 0
