--- a/finace-back/finace-admin-api/src/main/resources/application.yml
+++ b/finace-back/finace-admin-api/src/main/resources/application.yml
@@ -46,7 +46,7 @@ spring:
 
 # Mybatis
 mybatis:
-  mapper-locations: classpath*:mapper/**/*Mapper.xml
+  mapper-locations: classpath*:**/mapper/**/*Mapper.xml
   type-aliases-package: com.finace
   configuration:
     map-underscore-to-camel-case: true
